@@ -1,3 +1,11 @@
+2010-07-10  Matevz Tadel  <matevz.tadel@ijs.si>
+
+	* blob.C:
+	New demo - blob from two spheres.
+
+	* iso_surfs.C:
+	Add lamp to global lights.
+
 2007-07-09  Matevz Tadel  <matevz.tadel@ijs.si>
 
 	* starwars.C:
@@ -29,7 +37,7 @@
 
 	* iso_surfs.C:
 	Added a GTSRetriangulator to the scene.
-	
+
 	* torus.gts:
 	New demo, created via Gled interface.
 
